--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-json-pretty": "^2.2.0",
     "react-map-gl": "^7.0.19",
     "react-router-dom": "^6.4.1",
